# astrocache

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  TODO.txt  pyproject.toml  snapshot.py
astrocache/: __init__.py
funcache/: __init__.py
test/: astrocache_decorator.py  astrocache_decorator.py.snapshot.md  astrocache_test.py  astrocache_test.py.snapshot  astrocache_test.py.snapshot.md  foo.py  func_fingerprint_basic_test.py  func_fingerprint_basic_test.py.snapshot.md  func_fingerprint_deep_test.py  func_fingerprint_deep_test.py.snapshot.md  func_fingerprint_kwarg.py  funcache_test.py  funcache_test.py.snapshot  limitations_test.py  limitations_test.py.snapshot.md  other_module.py  util.py
test/resources/modules/a/: __init__.py
test/resources/modules/b/: __init__.py
