[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "astrocache"
version = "0.0.3"
authors = [
  { name="Andrew Matteson", email="andrewkmatteson@gmail.com" },
]
description = "Durable memoization that refreshes on code updates"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aromatt/astrocache"
Issues = "https://github.com/aromatt/astrocache/issues"
